--- a/.env
+++ b/.env
@@ -20,3 +20,5 @@ ADMIN_URL=https://elfateh13-admin-dhli.vercel.app
 CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
+
+base_URL=https://e-commerce-api-production-582c.up.railway.app/api   #http://localhost:5000
