--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ NODE_ENV=development
 
 # Database
 #MONGODB_URI=mongodb+srv://ibrahimomardotnet:5aKKFXlYlD06A0KA@cluster0.hmgjohj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-MONGODB_URI=mongodb://mongo:viwhfBXUhpcZexKLYOKuRMJozeXpGFRC@yamabiko.proxy.rlwy.net:15131
+#MONGODB_URI=mongodb://mongo:viwhfBXUhpcZexKLYOKuRMJozeXpGFRC@yamabiko.proxy.rlwy.net:15131
+MONGODB_URI=mongodb://mongo:hiWMfbDDUqQdtHzgHdXVJXKPEcvCoVat@shuttle.proxy.rlwy.net:13209
   #mongodb://localhost:27017/ecommerce
 # For MongoDB Atlas, use:
 # MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/ecommerce
