--- a/.env
+++ b/.env
@@ -22,4 +22,5 @@ CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
-base_URL=https://e-commerce-api-production-582c.up.railway.app/api   #http://localhost:5000
+#base_URL=https://e-commerce-api-production-582c.up.railway.app/api   #http://localhost:5000
+base_URL=https://e-commerce-api-production-ea9f.up.railway.app/api
