feat: add admin notification for new orders via Telegram

--- a/.env
+++ b/.env
@@ -22,5 +22,8 @@ CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
+TELEGRAM_BOT_TOKEN=8419574189:AAEpUA2-AKQNh8qjFpNja--b911GYP23iSk
+TELEGRAM_CHAT_ID=241603772
+
 #base_URL=https://e-commerce-api-production-582c.up.railway.app/api   #http://localhost:5000
 base_URL=https://e-commerce-api-production-ea9f.up.railway.app/api
